--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
+    "vue-chat-scroll": "^1.3.6",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0"
   },
@@ -43,7 +44,6 @@
     },
     "parserOptions": {
       "parser": "babel-eslint"
-  
     }
   },
   "browserslist": [
