--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "blueimp-md5": "^2.16.0",
     "core-js": "^3.4.4",
+    "crypto-js": "^4.0.0",
     "vue": "^2.6.10",
     "vue-chat-scroll": "^1.3.6",
     "vue-router": "^3.1.3",
